# rsc

./: README.md
2015/c++_concurrency_in_action/: .gitignore  Makefile  README.md  accumulate.cpp  mutex.cpp  notes.txt  stack.cpp
2015/linker/: intermediate.py  linker.py  writer.py
2015/rr_rebuilt/: .gitignore  Makefile  hello.c  rr-v1.cpp  util.cpp  util.h
2015/stl_counterfeit/: CMakeLists.txt  CMakeLists.txt.user.37049bf  README.md  algorithm.h  algorithm_unittest.cpp  map.h  map_unittest.cpp  string.h  string_unittest.cpp  unique_ptr.h  unique_ptr_unittest.cpp  unordered_map.h  unordered_map_unittest.cpp
2015/string_performance/: CMakeLists.txt  String.cpp  String.h  stringtest.cpp
2016/cracking_the_coding_interview/: CMakeLists.txt  arrays_strings.c  common.c  linked_lists.c  main.c  notes.txt  stacks_queues.c
2016/cryptopals/: .gitignore  1_1_hex_to_base64.cpp  1_2_fixed_xor.cpp  1_3_single_byte_xor_cipher.cpp  1_4_detect_single_character_xor.cpp  1_5_implement_repeating_key_xor.cpp  1_6_break_repeating_key_xor.cpp  1_7_aes_in_ecb_mode.cpp  1_8_detect_aes_in_ecb_mode.cpp  2_10_implement_cbc_mode.cpp  2_11_an_ecb_cbc_oracle.cpp  2_9_implement_pkcs7_padding.cpp  CMakeLists.txt  Makefile  README.md  util.cpp  util.h  util_test.cpp
2016/data_structures/: CMakeLists.txt  CyclicQueue.cpp
2016/json/: jsonwriter.cpp
2016/number_theory/: factors.py
2016/sedgewick/: README
2016/sedgewick/elementary_sorts/src/: Animation.java  Distribution.java  DoublingTest.java  FixedCapacityStack.java  FixedCapacityStackOfString.java  Insertion.java  Parentheses.java  Queue.java  QueueQuestion.java  ResizingArrayQueue.java  ResizingArrayStack.java  Selection.java  Shell.java  SortCompare.java  Stack.java  StackQuestion.java  VisualTrace.java
2016/sedgewick/hashtables/src/: PerfectHash.java  ST.java  SeparateChainingHashLinkedListST.java  SeparateChainingHashST.java
2016/sedgewick/mergesort/: build.xml
2016/sedgewick/mergesort/src/: Improvements.java  Merge.java  MergeBU.java  MergingSortedQueues.java
2016/sedgewick/symboltables/src/: ArrayST.java  BinarySearchST.java  FrequencyCountFromDictionary.java  FrequencyCounter.java  InterpolationSearch.java  OrderedArrayST.java  PerformanceDriver.java
2016/sedgewick/undirected_graphs/src/: .DrawTreeForBFS.java.swp  Bag.java  BreadthFirstsPaths.java  CC.java  DepthFirstSearch.java  DetailedTraceDfs.java  DrawTreeForBFS.java  Graph.java  GraphProperties.java  Paths.java  SymbolGraph.java  UFSearch.java
2016/vector_performance/: CMakeLists.txt  benchmark_append.cpp  benchmark_construct.cpp  vector.h
2016/vm/: .gitignore  BUGS_FOUND  CMakeLists.txt  Makefile  README.md  add.asm  assembler.cpp  assembler_unittest.cpp  codegenerator.cpp  codegenerator.h  codegenerator_unittest.cpp  compiler.cpp  compiler2.cpp  compiler_unittest.cpp  env.sh  enviroment.bash  exec_integrationtest.cpp  experiments.asm  integer_ops_benchmark.cpp  interpreter.cpp  interpreter_unittest.cpp  opcodes.cpp  opcodes.h  optimizer.cpp  optimizer_unittest.cpp  stackvm1.cpp  stackvm2.cpp  stackvm3.cpp  stackvm4.cpp  testdriver.py  vm.h
2016/vm/testdata/: print.asm
2016/wasm_fold_constants_test_scripts/: .gitignore  1316803_tests.js  README.md  assembly_not_optimized.txt  disasm.js  div.cpp  f32.add.js  f32.sub.js  f64.add.js  f64.sub.js  i32.add.js  i32.shl.js  i32.shr_s.js  i32.shr_u.js  i32.sub.js  i64.add.js  i64.shl.js  i64.shr_u.js  i64.sub.js  ror.js  runtests.sh  twocomplement.cpp
2017/advent_of_code/: advent_of_code_2016.ipynb  advent_of_code_2017.ipynb
2017/advent_of_code/.ipynb_checkpoints/: advent_of_code_2016-checkpoint.ipynb  advent_of_code_2017-checkpoint.ipynb  norvig 2017 mimics-checkpoint.ipynb
2017/gamez/: .gitignore  Makefile  pong.cpp  snake.cpp
2018/cache_effects/: Makefile  main.cpp
2018/csapp/: README.md  ch2_representing_information.md
2018/csapp/ch2/: 2_60_replace_byte.cpp  2_61_cond_true.cpp  2_62_are_int_shifts_arithmetic.cpp  2_63_fill_in_code_for_C_functions.cpp  2_64_any_odd_bit.cpp  Makefile
2018/csapp/ch5/: CMakeLists.txt  main.c
2018/csapp/ch5/combine/: benchmark.c
2018/csapp/csapp_labs/malloclab-handout/: Makefile  clock.c  config.h  fcyc.c  fsecs.c  mdriver.c  memlib.c  mm.c
2018/elf/: Makefile  hello.c  nm-gnu.c  nm.c  shared.cpp  size.c
2018/mouse/: .gitignore  CMakeLists.txt  easter.mouse  hanoi.mouse  main.c  mouse.c  test.mouse
2018/parlante_problems/: CMakeLists.txt  linked_lists.c  main.c  notes.txt
2018/wirth_compiler/: CMakeLists.txt  common.c  lex.c  main.c  oberon.txt  parse.c  risc.c  tests.c
2019/advent_of_code/: common.py  day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2019/bakhvalov_optimization_contest/: Makefile  README.md  report.md  setup_for_benchmarking.sh  sieve.c  sieve1.c  sieve2.c  sieve3.c  sieve4.c  sieve5.c  sieve6.c  sieve7.c  sieve8.c  sieve9.c
2019/implement_system/: CMakeLists.txt  exploit_env.c  exploit_fd.c  main.c  system_env.c  system_fd.c
2020/advent_of_code/: common.py  main.py  solutions.py
2020/netstring/: CMakeLists.txt
2021/python_enums/: main.py
2021/snake/: CMakeLists.txt  build.sh  main.c
2021/tigerbook/elements/: bst.sml  builtin.sml  curry.sml  easy_functions.sml  environments.sml  expressions.sml  higer_order.sml  matches.sml  new_types.sml  patterns_funcs.sml  polymorphic.sml  recursive_functions.sml  trees.sml  tuples_lists.sml  types.sml
2021/tigerbook/tiger/chap1/: bst.sml  slp.sml
2021/tigerbook/tiger/chap2/: test.tig  tiger.lex  tiger.lex.sml
2021/tigerbook/tiger/chap2/.cm/GUID/: driver.sml  errormsg.sml  tiger.lex.sml  tokens.sig  tokens.sml
2021/tigerbook/tiger/chap2/.cm/SKEL/: tiger.lex.sml
2021/tigerbook/tiger/chap2/.cm/x86-unix/: driver.sml  errormsg.sml  tiger.lex.sml  tokens.sig  tokens.sml
2022/rust_games/: README.md
2022/rust_games/pong/: Cargo.toml
2022/rust_games/pong/src/: main.rs
